# BioPyTools

./: .gitignore  .~lock.example_data.tsv#  AcessionNumbers.py  CLAUDE.md  Exclue_multispecies.py  ExtractFirstSequence.py  ExtractProteins.py  ExtractSequences.py  PrimerTm.py  README.md  RosalindProblems.py  blast2.py  blast_primers.asn  blastn.py  blastp.py  code-review_v01.md  code-review_v02.md  example_data.tsv  exemplo.fasta  pyproject.toml  removeAspas.py  requirements.txt  teste.tsv
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
DataView/: Orthofinder-venn.py
biopytools/: __init__.py
biopytools/blast/: __init__.py  blastn.py  blastp.py
biopytools/common/: __init__.py  blast.py  fasta.py  io.py
biopytools/dataview/: __init__.py  orthofinder_venn.py
biopytools/fasta_tools/: __init__.py  accession_numbers.py  (+4 more)
examples/: primers_example.fasta  run_qpcr_batch.sh
qPCR/: ExtractSequences.py  HPV11.fasta  Pega_primers.py  PrimerTm.py  blast.py  blastPrimers.py  checkSpecSens.py  example_data.tsv  exemplo.fasta  exemplo2.fasta  fasta_handler.py  gcContent.fasta  main.py  putHeader.py  report_Human papillomavirus.tsv  report_humanpapillomavirus.tsv  report_humanpapillomavirus_GP5+_None.txt  run.sh  teste.tsv
scratch/: teste_pandas.py  testes.py  trasnlate.py
separados/: example_data.tsv  exemplo.fasta  exemplo1.tsv  report_humanpapillomavirus.tsv
tests/: test_blast_runner.py  test_fasta.py  test_primer_tm.py  test_spec_sens.py
(+19 files in other folders)
